Fix background stretch and footer

--- a/webdocs/css/main.css
+++ b/webdocs/css/main.css
@@ -57,7 +57,7 @@ a:hover {
 #mainWrapper {
     background-color: #EEE;
     width: 1080px;
-    height:100%;
+    min-height:100%;
     margin:0px auto;
 }
 
@@ -174,11 +174,12 @@ h1#headerText {
     margin-bottom:15px;
 }
     
+
 #footer {
-    position:absolute;
-    bottom:0;
-    width:1080px;
-    height:20px;
+    clear: both;
+    position: relative;
+    z-index: 10;
+    height: 20px;
 }
 #footer p {
     font-size: 16px;
@@ -197,3 +198,4 @@ h1#headerText {
 #footer p a:hover {
     color:cornflowerblue;
 }
+
